<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/topbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/place_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/image_of_the_place"
                android:src="@drawable/ic_launcher_foreground"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:background="@color/purple_500"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/place_name"
                android:text="@string/place_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/place_date"
                android:text="@string/date"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/place_description"
                android:text="@string/place_description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_margin="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shareButton"
                android:text="@string/share"
                app:icon="@drawable/ic_baseline_share_24"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>