<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/single_card"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/white"
    app:strokeColor="@color/material_on_surface_stroke"
    app:strokeWidth="1dp"
    app:cardCornerRadius="@dimen/cardview_default_radius">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:id="@+id/placeImage"
            android:background="@color/purple_500"
            android:contentDescription="@string/image_of_the_place"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/placeTextView"
            android:layout_margin="3dp"
            android:text="@string/place_title"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateTextView"
            android:layout_margin="3dp"
            android:text="@string/date"
            android:textAppearance="?attr/textAppearanceBody2" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>