<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/fab_add"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/placeTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                android:hint="@string/place_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/placeTextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/placeTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_baseline_gps_fixed_24"
                android:contentDescription="@string/take_gps_position"
                android:backgroundTint="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/placeTextInputLayout"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                android:hint="@string/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:id="@+id/dateTextInputEditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/dateTextInputLayout"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                android:hint="@string/place_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/descriptionTextInputEditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/captureButton"
                android:text="@string/take_picture"
                app:icon="@drawable/ic_baseline_camera_alt_24"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:id="@+id/imageView"
                android:src="@drawable/ic_launcher_foreground"
                android:background="@color/purple_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/captureButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="10dp"
                android:contentDescription="@string/image_taken" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
